# spoofed_audio_classifier

./: README.md  main.py  pyproject.toml
scripts/: evaluate_model.py  quick_test.py  train_model.py
src/data/: dataset.py  preprocessing.py
src/inference/: predict.py  record_test.py
src/models/: wav2vec_classisfier.py
src/training/: config.py  evaluate.py  train.py
wandb/: latest-run
wandb/offline-run-20250627_155054-bek7dhfh/: run-bek7dhfh.wandb
wandb/offline-run-20250627_155054-bek7dhfh/files/: wandb-metadata.json
wandb/offline-run-20250627_155451-r1q27zyt/files/: wandb-metadata.json
wandb/offline-run-20250627_174658-3h9fjmq7/: run-3h9fjmq7.wandb
wandb/offline-run-20250627_174658-3h9fjmq7/files/: wandb-metadata.json
wandb/offline-run-20250627_202835-bjarqapl/: run-bjarqapl.wandb
wandb/offline-run-20250627_202835-bjarqapl/files/: requirements.txt  wandb-metadata.json
